test/valid/tcomp000-scope-cond/tcomp000-scope-cond.agu
-- tcomp000, Vasco T. Vasconcelos
let main (_) : Unit -> Unit =
  let x : Int =
    if true
    then (let x : Int = 5; x) 
    else (let x : Unit = unit; 6)  ;
  print(x)
