test/invalid-semantic/tcomp000-branches-diff-types/branches-diff-types.agu
let _ : Unit =
  if true then unit else 5